2012-06-30  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/grpicon.ico:  Icon with more color depths and resolutions,
	derived from Mojca Miklavec's SVG icon, see patch #3469808.

	Store icons in CVS in binary format.
	* src/win/grpicon.ico src/win/texticon.ico:  New files.
	* config/cygwin/Makefile config/mingw/Makefile config/msvc/Makefile
	config/watcom/Makefile src/win/wgnuplot.rc:  Binary icons.
	* src/win/geticon.c:  Removed.

	* config/makefile.nt:  Superseded by msvc/Makefile. Removed.

	Eliminate some compiler warnings.
	* src/axis.c (load_one_range):  Make static and add prototype.
	* src/bitmap.c (b_boxfill):  Remove unused variable.
	* src/graphics.c (compare_ypoints, two_edge_intersect,
	hyperplane_between_points):  Prototypes.
	* src/plot.h (gnu_main):  Add prototype.
	* src/pm3d.c (pm3d_plot):  Unused variable.
	* src/stats.c (statsrequest):  Remove duplicate prototype.
	* src/util.c (utf8_getmore, utf8_strchrn):  Make static and add
	prototype.
	* src/win/winmain.c (gnu_main):  Remove incorrect prototype.
	* src/win/wmenu.c (SendMacro, LoadMacros):  Remove unused variables.
	* src/win/wpause.c (CreatePauseClass, win_sleep):  Include winmain.h.
	Prototypes. 
	* src/win/wprinter.c (PrintFind):  Add prototype and make static.
	* src/win/wtext.c (AboutDlgProc):  Prototype.
	* src/wxt/gpcairo.c (gp_cairo_convert, gp_cairo_create_layout):  Match
	prototypes.
	* src/wxt/wxt_gui.cpp (wxt_cairo_draw_hypertext):  Fix memory leak.

	* src/tables.c (num_predefined_colors):  Off by one.

	* src/win/wgdiplus.cpp (gdiplusCreatePen):  Use square line ends and
	miter line joins.

2012-06-29  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync with English documentation (rev.1741).

2012-06-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots):  Zero is often a special point in a
	function domain.  Make sure we don't miss it due to round-off error. 
	Bug #3519079
